--- a/tffApp/pubspec.yaml
+++ b/tffApp/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  video_player: ^2.0.0
+    
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -32,6 +34,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
